Padding and spaces changes

--- a/Correu_caducitat_renova_CA/  Correu_caducitat_renova_CA.mjml
+++ b/Correu_caducitat_renova_CA/  Correu_caducitat_renova_CA.mjml
@@ -12,22 +12,10 @@
         letter-spacing: 0.5px;
       }
       .body {
-        padding-top: 100px;
+        padding-top: 50px;
       }
       .wrapper {
         width: 80%;
-      }
-      .cell {
-        padding: 0px;
-      }
-      .data-section {
-        margin: 0px 25px 0px 25px;
-      }
-      td {
-        color: #656D72;
-      }
-      th {
-        color: #1B2124;
       }
       a {
         color: #005CD1;
@@ -40,37 +28,37 @@
     </mj-style>
   </mj-head>
   <mj-body background-color="#F5F5F6" css-class="body">
-    <mj-wrapper background-color="#FFFFFF" border-radius="12px" css-class="wrapper">
-      <mj-section>
+    <mj-wrapper background-color="#FFFFFF" border-radius="12px" css-class="wrapper" padding="0px">
+      <mj-section padding="32px 24px 24px 24px">
         <mj-column>
-          <mj-text padding="0px 25px 0px 25px">
+          <mj-text padding="0px">
             <h1 style="margin:0"><a href="https://www.idcat.cat/"><img src="../assets/logo.png" width="88px" height="80px" align="left" alt="idCAT CERTIFICAT"/></a></h1>
           </mj-text>
         </mj-column>
       </mj-section>
       <mj-section padding="0px">
         <mj-column>
-          <mj-text padding="0px 25px" mj-class="arial-18" color="#1B2124">
+          <mj-text padding="0px 24px" mj-class="arial-18" color="#1B2124">
             <h2 style="margin:0;font-size:18px;">Hola Marta,</h2>
           </mj-text>
-          <mj-text padding="0px 25px" mj-class="arial-16" color="#1B2124">
+          <mj-text padding="0px 24px" mj-class="arial-16" color="#1B2124">
             <p><strong>El teu idCAT Certificat caducarà aviat.</strong> Renova'l abans del dia [DATA DE CADUCITAT] per poder continuar fent-ne ús.</p>
             <p>Per renovar-lo utilitza l'<strong>ordinador i obre el navegador</strong> en el qual tens instal·lat l'idCAT Certificat.</p>
           </mj-text>
-          <mj-button href="#" background-color="#005CD1" border-radius="8px" align="left" inner-padding="8px 16px" mj-class="arial-16-bold">Identifica't per accedir-hi</mj-button>
+          <mj-button href="#" background-color="#005CD1" padding="16px 24px 0px 24px" border-radius="8px" align="left" inner-padding="8px 16px" mj-class="arial-16-bold">Identifica't per accedir-hi</mj-button>
         </mj-column>
       </mj-section>
-      <mj-section>
+      <mj-section padding="24px 0px 0px 0px">
         <mj-column>
-          <mj-text padding="0px 25px" mj-class="arial-16" color="#1B2124">
-            <h2 style="font-size:16px;">Més informació</h2>
+          <mj-text padding="0px 24px" mj-class="arial-16" color="#1B2124">
+            <h2 style="font-size:16px;margin:0;">Més informació</h2>
             <p style="color:#656D72;">Un cop caducat no el podràs renovar en línia, però el podràs obtenir de nou en una <a href="#">entitat de registre idCAT.</a></p>
             <p style="color:#656D72;">Per saber-ne més visita: <a href="#">Com renovo l'idCAT Certificat?</a></p>
             <p style="color:#656D72;">Si tens dubtes sobre el funcionament del servei d’identitat digital pots consultar el nostre <a href="#">portal de suport.</a></p>
           </mj-text>
         </mj-column>
       </mj-section>
-      <mj-section padding="0px 25px 0px 25px">
+      <mj-section padding="24px 24px 32px 24px">
         <mj-column>
             <mj-divider padding="0px" border-width="1px" border-style="solid" border-color="#E5E6E8"/>
             <mj-text padding="0px" color="#656D72" mj-class="arial-14">
@@ -81,9 +69,9 @@
         </mj-column>
       </mj-section>
     </mj-wrapper>
-    <mj-section css-class="wrapper">
+    <mj-section css-class="wrapper" padding="0px">
       <mj-column>
-        <mj-text padding="0px 15px" mj-class="arial-14" color="#656D72">
+        <mj-text padding="24px 24px 16px 24px" mj-class="arial-14" color="#656D72">
           <p style="margin:0">Aquest missatge de correu electrònic procedeix d'una adreça exclusivament d'enviament. No responguis aquest missatge. Servei prestat per l'Administració Oberta de Catalunya (AOC).</p>
         </mj-text>
         <mj-image src="../assets/logo-aoc.png" alt="AOC. Administració Oberta de Catalunya" align="left" width="174px" height="28px" padding="15px"></mj-image>
